overflow issue fixed

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -199,11 +199,11 @@
 
 .grid-container-1-2 .intersect {
     transform: translateX(20px);
-    transition: 1s ease;
+    transition: .7s ease;
     opacity:0}
     .grid-container-1-2 .show {
     transform: translateX(0);
-    transition: 1s ease;
+    transition: .7s ease;
     opacity:1;
     
    
@@ -305,6 +305,12 @@
     
 
 }
+
+#team-img {
+
+    width:100%
+}
+
 
 
 /* Style inputs with type="text", select elements and textareas */
